--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 
 <section class="main">
     <h2 class="Yousoft">Yousoft</h2>
-   <img src="/stars1.webp" id="stars">
-   <img src="/moon2.webp" id="moon">
-   <img src="/mountains3.webp" id="mountains3">
-   <img src="/mountains4.webp" id="mountains4">
-   <img src="/river5.webp" id="river">
-   <img src="/boat6.webp" id="boat">
-   <img src="/mountains7.webp" id="mountains7">
+   <img src="stars1.webp" id="stars">
+   <img src="moon2.webp" id="moon">
+   <img src="mountains3.webp" id="mountains3">
+   <img src="mountains4.webp" id="mountains4">
+   <img src="river5.webp" id="river">
+   <img src="boat6.webp" id="boat">
+   <img src="mountains7.webp" id="mountains7">
 
 
 </section>
